--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -4,28 +4,21 @@
     width: 100%;
 }
 
-h5 {
-    color: rgb(194, 187, 187);
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: 20px;
-    text-transform: uppercase;
-    padding: 30px 0 0 0;
-}
-
-input {
-    width: 350px;
-    height: 36px;
-    text-align: center;
-    font-size: 20px;
-    border: 3px solid rgb(214, 209, 209);
-}
-
 a {
     font-size: 25px;
     text-decoration: none;
     color: white;
     font-weight: 600;
-    text-transform: uppercase;
     padding-bottom: 20px;
 }
+
+.admin {
+    margin-bottom: 15px;
+    font-size: 20px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    text-transform: capitalize;
+    
+    
+}
+
 
