--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -1,23 +1,35 @@
 .footer {
     background-color: black;
-    height: 470px;
+    position: absolute;
+    height: 450px;
     width: 100%;
+    bottom: 0;
+    right: 0;
+
+}
+
+iframe {
+    margin-top: 1px;
 }
 
 a {
+
     font-size: 25px;
     text-decoration: none;
     color: white;
     font-weight: 600;
-    padding-bottom: 20px;
+    margin-top: 10px;
+    cursor: pointer;
+}
+
+a:hover {
+    color: gray;
 }
 
 .admin {
-    margin-bottom: 15px;
     font-size: 20px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     text-transform: capitalize;
-    
     
 }
 
