--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -30,7 +30,6 @@
 
 h3 {
     color: white;
-    text-shadow: 3px 3px rgb(170, 164, 164);
     font-size: 35px;
     margin-top: 8px;
 }
@@ -98,6 +97,13 @@ h3 {
         display: flex;
     }
 }
+
+@media screen and (max-width: 300px) {
+    h3 {
+        margin-right: -10px;
+        font-size: 15px;
+    }
+ }
 
 @media screen and (max-width: 700px) {
    h3 {
