--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -98,9 +98,9 @@ h3 {
     }
 }
 
-@media screen and (max-width: 300px) {
+@media screen and (max-width: 400px) {
     h3 {
-        margin-right: -10px;
+        margin-left: 40px;
         font-size: 15px;
     }
  }
