--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -1,6 +1,6 @@
 .footer {
     background-color: black;
-    position: absolute;
+    position: fixed;
     height: 450px;
     width: 100%;
     bottom: 0;
