--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -100,8 +100,9 @@ h3 {
 
 @media screen and (max-width: 400px) {
     h3 {
-        margin-left: 10px;
+        margin-left: -20px;
         font-size: 15px;
+        margin-top: 5px;
     }
  }
 
