--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -102,7 +102,7 @@ h3 {
     h3 {
         margin-left: -360px;
         font-size: 15px;
-        margin-top: 10px;
+        margin-bottom: 10px;
     }
  }
 
