--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -39,10 +39,10 @@ h3 {
     position: fixed;
     left: -250px;
     width: 250px;
-    height: 100%;
+    height: 100vh;
+    overflow-y: scroll;
     top: 0px;
     background: #555;
-    overflow-y: scroll;
     transition: .5s;
     text-align: left;
 }
@@ -88,9 +88,9 @@ label #btn, label #cancel {
 }
 
 label #btn {
-    left: 45px;
-    top: 24px;
-    font-size: 46px;
+    left: 18px;
+    top: 25px;
+    font-size: 43px;
     color: white;
     padding: 6px 12px;
     transition: all .5s;
@@ -157,7 +157,7 @@ section {
 .drop-menu {
     position: absolute;
     width: 250px;
-    left: 50px;
+    left: 40px;
     top: calc(100% + .25rem);
     background-color: #333;
     color: white;
@@ -208,7 +208,7 @@ section {
 
 @media screen and (max-width: 400px) {
     h3 {
-        font-size: 15px;
+        font-size: 10px;
     }
 
     #btn {
