--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -40,7 +40,7 @@ h3 {
     left: -250px;
     width: 250px;
     height: 100vh;
-    overflow-y: scroll;
+    overflow-y: auto;
     top: 0px;
     background: #555;
     transition: .5s;
@@ -88,7 +88,7 @@ label #btn, label #cancel {
 }
 
 label #btn {
-    left: 18px;
+    left: 12px;
     top: 25px;
     font-size: 43px;
     color: white;
