--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -41,6 +41,7 @@ h3 {
     width: 250px;
     height: 100vh;
     overflow-y: auto;
+    overflow-x: hidden;
     top: 0px;
     background: #555;
     transition: .5s;
