--- a/src/App.css
+++ b/src/App.css
@@ -6,17 +6,9 @@
   overflow-x: hidden;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
+.pad {padding: 130px 0px;}
+/*
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -26,17 +18,12 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-}
+}*/
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+@media (max-width: 480px) { 
+  body {
+    background-color: #000;
   }
 }
+
+
