--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -4,8 +4,19 @@
     align-items: center;
     background-color: rgb(189, 185, 188);
     width: 100%;
+    height: 75px;
 }
+ .nav{
+     position: fixed;
+     width: 100%;
+     z-index: 1000;
+ }
 
+ .socials-icon{
+     margin-top: -9px;
+    margin-left: auto;
+    margin-right: 30px;
+ }
 
 .header-list {
     display: flex;
@@ -13,7 +24,8 @@
     width: 96%;
     height: 50px;
     background-color: black;
-    margin-top: 20px;
+    margin-top: 17px;
+    position: absolute;
 }
 
 .link {
@@ -22,7 +34,7 @@
     padding: 10px 30px;
     font-size: 20px;
     font-weight: 400;
-    top: 10px;
+    top: -5px;
     text-transform: uppercase;
 }
 .link:hover {
@@ -56,7 +68,7 @@ h3 {
     line-height: 70px;
     background: #333;
     user-select: none;
-    font-weight: 600;
+    font-weight: none;
     top: 20px;
 }
 
@@ -72,7 +84,28 @@ h3 {
     border-bottom: 1px solid black;
     transition: .5s;
 }
+/*
+.down-links {
+    display: block;
+    height: 100%;
+    width: 100%;
+    line-height: 65px;
+    font-size: 10px;
+    color: white;
+    margin-left: 15px;
+    box-sizing: border-box;
+    border-bottom: 1px solid black;
+    transition: .5s;
+}
+*/
 
+.down-links {
+    height: 50%;
+    line-height: 35px;
+    transition: .5s;
+
+
+}
 .list ul li:hover {
     padding-left: 30px;
 }
@@ -89,14 +122,16 @@ label #btn, label #cancel {
 }
 
 label #btn {
-    left: 12px;
-    top: 25px;
-    font-size: 43px;
+    left: 20px;
+    top: 30px;
+    font-size: 45px;
     color: white;
     padding: 6px 12px;
     transition: all .5s;
     display: none;
+    background: #000 !important;
     transition: all .5s ease-in-out;
+    z-index: 1000;
 }
 
 label #cancel {
@@ -123,10 +158,8 @@ label #cancel {
     left: 195px;
 }
 
-section {
-    background-position: center;
-}
 
+/*
 #check:checked ~ section {
     margin-left: 250px;
     transition: all .5s;
@@ -136,14 +169,15 @@ section {
     margin-left: 250px;
     transition: all .5s;
 }
+*/
 
 .drop-link {
     margin-top: 10px;
     text-decoration: none;
     color: white;
     padding: 6px 8px 6px 20px;
-    font-size: 20px;
-    font-weight: 400;
+    font-size: 15px;
+    font-weight: 200;
     text-transform: uppercase;
     background: none;
     cursor: pointer;
@@ -153,23 +187,26 @@ section {
 .dropdown {
     position: relative;
     text-align: left;
+    top: 5px;
 }
 
 .drop-menu {
     position: absolute;
     width: 250px;
     left: 40px;
-    top: calc(100% + .25rem);
+    top: calc(100% + .15rem);
     background-color: #333;
-    color: white;
-    font-size: 20px;
+    font-size: 10px;
+    
     padding: .5rem;
     border-radius: .25rem;
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, .1);
     opacity: 0;
-    transform: translateY(-10px);
+
+/*    transform: translateY(-10px);
     pointer-events: none;
     transition: opacity 150ms ease-in-out, transform 150ms ease-in-out;
+*/   
 }
 
 .dropdown > .drop-link:focus, .drop-link:hover {
