--- a/src/components/music/music.css
+++ b/src/components/music/music.css
@@ -1,15 +1,15 @@
-.music-container {
+/*.music-container {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 2rem;
+    margin-top: 30px;
+}*/
+h1 {
+    margin-top: 20px;
 }
 
-.music {
-    display: block;
-    gap: 1rem;
-}
 
-.music a {
+.featured-item a {
     color: rgb(65, 61, 61);
     text-decoration: none;
     cursor: pointer;
@@ -17,14 +17,19 @@
     font-size: 20px;
 }
 
-.music a:hover {
+.featured-item a:hover {
     text-decoration: underline;
 }
 
-/*----- MEDIA QUERIES TABLET (MEDIUM DEVICES)-------*/
+.featured-element {
+    padding: 10px;
+    margin-right: 20px;
+}
+
+/*----- MEDIA QUERIES TABLET (MEDIUM DEVICES)-------*
 @media screen and (max-width: 1024px) {
     .music-container {
-        grid-template-columns: 1fr;
+        grid-template-columns: 2fr;
     }
 
     .music {
@@ -32,9 +37,150 @@
     }
 }
 
-/*----- MEDIA QUERIES PHONES (SMALL DEVICES)-------*/
+/*----- MEDIA QUERIES PHONES (SMALL DEVICES)-------
 @media screen and (max-width: 600px) {
     .music-container {
         gap: 1rem;
     }
+}
+*/
+
+.portfolio {
+	background-color: #000;
+}
+.carousel-item {
+	margin-right: 20px;
+}
+
+.portfolio.pad {
+	padding-top: 100px;
+	padding-bottom: 70px;
+}
+.img-fit {
+	margin-top: -40px;
+	object-fit: contain;
+}
+.home-card {
+	height: auto;
+    width: 300px;
+	background-color: #333;
+}
+
+.home-card .figure {
+    position: relative;
+}
+/*
+.home-card .figure img {
+    top: 0;
+	left: 0;
+	position: relative;
+	
+}
+
+.home-card .figure .p-hover {
+    width: 80%;
+	height: 220px;
+	line-height: 28px;
+	font-size: 18px;
+	border: 10px solid #fff;
+	color: #fff;
+	position: absolute;
+	padding: 20px 25px;
+	z-index: 9;
+	top: 20px;
+	left: 30px;
+	opacity: 0;
+}
+
+.home-card:hover .figure p {
+	opacity: 1;
+
+}
+*/
+.home-card .p-transparent{
+	position: absolute;
+	top: -20px;
+	left: 0;
+	width: 80%;
+	height: 80%;
+	margin-left: 10%;
+	margin-top: 13%;
+	opacity: 0;
+	border: 10px solid #fff;
+	-webkit-transition: all 0.5s ease;
+	-moz-transition: all 0.5s ease;
+	-ms-transition: all 0.5s ease;
+	-o-transition: all 0.5s ease;
+	transition: all 0.5s ease;
+}
+
+.p-hover {
+	width: 80%;
+	height: 220px;
+	line-height: 28px;
+	font-size: 18px;
+	border: 10px solid #fff;
+	color: #fff;
+	position: absolute;
+	padding: 20px 25px;
+	z-index: 9;
+	top: 20px;
+	left: 30px;
+	opacity: 1;
+	-webkit-transition: all 0.25s linear;
+	-moz-transition: all 0.25s linear;
+	-ms-transition: all 0.25s linear;
+	-o-transition: all 0.25s linear;
+	transition: all 0.25s linear;
+}
+
+.home-card:hover .p-transparent,
+.home-card:hover .p-hover  {
+	top: 0;
+	opacity: 1;
+	-webkit-transition: all 0.25s linear;
+	-moz-transition: all 0.25s linear;
+	-ms-transition: all 0.25s linear;
+	-o-transition: all 0.25s linear;
+	transition: all 0.25s linear;
+}
+
+.p-hover {
+	padding: 30px;
+	text-align: center;
+}
+
+.p-hover h3 {
+	margin: 0;
+	margin-top: 30px;
+	font-size: 28px;
+	font-weight: 300;
+	color: #000;
+}
+
+.m-cont {
+    
+}
+
+.p-hover hr {
+	width: 40px;
+	margin: 20px auto;
+}
+
+.view {
+    margin-top: 60px;
+}
+
+.v-btn {
+    margin-bottom: 20px;
+    margin-top: 5px;
+}
+
+.featured .featured-item {
+	max-width: 450px;
+	margin: 0 auto;
+	margin-top: 30px;
+	padding-bottom: 30px;
+    gap: 1rem;
+    
 }
