--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -64,11 +64,38 @@
   
   
   form {
-    max-width: 600px;
-    text-align: center;
-    margin: 20px auto;
+    width: 400px;
+    padding: 1em;
+    border: 1px solid #ccc;
+    border-radius: 1em;
+    margin: 30px auto;
   }
+
   
+
+.phone {
+    border: 1px solid #555;
+    outline: 0;
+    padding: 0.2em;
+    border-radius: 8px;
+    display: block;
+    width: 100%;
+    margin-top: 1em;
+}
+
+input {
+    background-color: #555;
+}
+
+.btn {
+    margin-top: 40px;
+}
+  
+.button:hover {
+    box-shadow: 0 1px 1px 1px rgba(0, 0, 0, 0.2);
+}
+ /*
+ 
   input,
   textarea {
     border: 0;
@@ -81,7 +108,7 @@
     font-family: 'Merriweather', sans-serif;
     resize: none;
   }
-  
+ 
   #input-submit {
     color: white;
     background: #e74c3c;
@@ -121,9 +148,9 @@
   .cf:before,
   .cf:after {
     content: ' ';
-    display: table;
+    display: flex;
   }
   
   .cf:after {
     clear: both;
-  }
+  }*/
