--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,33 @@
     background-color: #000;
     color: #fff;
   }
+
+  .song-info {
+    color: #fff;
+  }
+}
+
+/* Back to top */
+
+.totop {
+	position: fixed;
+	bottom: 10px;
+	right: 10px;
+	z-index: 104400;
+  background-color: blue;
+  color: #fff;
+  
+}
+
+.totop a, .totop a:visited{
+	display: block;
+	width: 50px;
+	height: 50px;
+	color: #fff !important;
+	text-align: center;
+	font-size: 20px;
+	line-height: 50px;
+	border-radius: 2px;
 }
 
 
