--- a/src/components/music/music.css
+++ b/src/components/music/music.css
@@ -7,7 +7,16 @@
 h1 {
     margin-top: 20px;
 }
+.music {
+    margin-right: 20px;
+    margin-left: 20px;
+}
 
+.carousel-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
 .featured-item a {
     color: rgb(65, 61, 61);
@@ -60,11 +69,7 @@ h1 {
 	margin-top: -40px;
 	object-fit: contain;
 }
-.home-card {
-	height: auto;
-    width: 300px;
-	background-color: #333;
-}
+
 
 .home-card .figure {
     position: relative;
@@ -116,7 +121,7 @@ h1 {
 
 .p-hover {
 	width: 80%;
-	height: 220px;
+	height: 420px;
 	line-height: 28px;
 	font-size: 18px;
 	border: 10px solid #fff;
@@ -126,7 +131,7 @@ h1 {
 	z-index: 9;
 	top: 20px;
 	left: 30px;
-	opacity: 1;
+	opacity: 0;
 	-webkit-transition: all 0.25s linear;
 	-moz-transition: all 0.25s linear;
 	-ms-transition: all 0.25s linear;
@@ -184,3 +189,4 @@ h1 {
     gap: 1rem;
     
 }
+
